# urstory-rag

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: a1b2c3d4e5f6_add_embedding_column_to_chunks.py  b2c3d4e5f6a7_change_embedding_dim_1536.py  c3d4e5f6a7b8_revert_embedding_dim_1024.py  cac992dd33a5_add_source_watchpath_and_watched_files.py  d4e5f6a7b8c9_change_embedding_dim_1536_openai.py  e35c49ccb454_initial_tables.py  f2544756c0c2_add_users_table.py
backend/app/: config.py  dependencies.py  exceptions.py  logging_config.py  main.py  redis.py  sentry_config.py  worker.py
backend/app/api/: admin.py  auth.py  documents.py  evaluation.py  health.py  monitoring.py  search.py  settings.py  system.py  watcher.py
backend/app/middleware/: cache_header.py  logging.py  rate_limit.py  security.py  shutdown.py
backend/app/models/: database.py  schemas.py
backend/app/monitoring/: alerts.py  langfuse.py
backend/app/pipelines/: search.py
backend/app/services/: auth.py  cache.py  resilience.py  settings.py
backend/app/tasks/: alerts.py  evaluation.py  indexing.py  watcher.py
backend/scripts/: reindex_all.py
backend/tests/: conftest.py
backend/tests/fixtures/: sample.docx  sample.md  sample.txt  sample_evaluation_dataset.json
backend/tests/integration/: test_auth_api.py  test_docling_pipeline.py  test_document_pipeline.py  test_evaluation_run.py  test_full_pipeline.py  test_guardrails_pipeline.py  test_resilience.py  test_watcher_pipeline.py
backend/tests/performance/: test_search_performance.py
backend/tests/unit/: test_alerts.py  test_auth_service.py  test_cache_invalidation.py  test_cache_metrics_api.py  test_cache_service.py  test_cascading_evaluator.py  test_cascading_search.py  test_celery_tasks.py  test_chunking.py  test_config.py  test_converter.py  test_converter_integration.py  test_docling_converter.py  test_document_scope.py  test_documents_api.py  test_elasticsearch_store.py  test_evaluation.py  (+45 more)
(+155 files in other folders)
